# std-dev-env

./: .envrc  .gitignore  README.md  flake.nix  renovate.json
.github/actions/setup-nix/: action.yml
.github/workflows/: stack-keeper-flake-bootstrap.yml
lib/: base.nix  cacheRoots.nix  default.nix  nix.nix  readScripts.nix  tasks.nix
lib/base/: default.nix  devenv.nix
lib/base/scripts/: check  clean  format  lint  tests  up  upgrade
lib/nix/: default.nix  devenv.nix
lib/nix/scripts/: format  lint  nix-format  nix-lint  shell-format  shell-lint  tests  upgrade
lib/python/: default.nix  devenv.nix  mkPoetry2Nix.nix
lib/python/scripts/: format  lint  python-lint  upgrade  upgrade-python
lib/tofu/: default.nix  devenv.nix
lib/tofu/scripts/: format  lint  tests  tofu-lint  tofu-validate  upgrade  upgrade-tofu
scripts/: tests
templates/: .gitignore
templates/base/: .envrc  flake.nix
templates/nix/: .gitignore  flake.nix
templates/nix/.github/: CODEOWNERS
templates/nix/.github/workflows/: check.yml
templates/python/: .envrc  .gitignore  flake.nix  pyproject.toml
templates/python/.github/actions/setup-nix/: action.yml
templates/python/.github/workflows/: check.yml
templates/python/app/: main.py
templates/python/src/app/: main.py
templates/python/test/: test_my_app.py
templates/tofu/: .gitignore  .tflint.hcl  flake.nix
templates/tofu/.github/actions/setup-nix/: action.yml
templates/tofu/.github/workflows/: check.yml
templates/tofu/infra/main/: .terraform.lock.hcl  main.tf  resource.tf
tests/: templates  templates.sh
