[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [
  { include = "app", from="src" }
]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
myapp = 'app.main:main'

[tool.poetry.group.dev.dependencies]
ruff = "0.2.2"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
  "--import-mode=importlib"
]